All requirements of the project completed

--- a/client/src/Admin/pages/product/addproduct.css
+++ b/client/src/Admin/pages/product/addproduct.css
@@ -3,6 +3,10 @@
     margin-left: 10px;
     margin-right: 10px;
 }
+.ant-upload-list-item{
+    display:none;
+    visibility: hidden;
+}
 .productContainer{
     margin-top: 10px;
     border-radius: 3%;
